--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,8 +2,8 @@
   "name": "@repo/ui",
   "version": "0.0.0",
   "exports": {
-    "./counter": "./components/counter.ts",
-    "./header": "./components/header.ts",
+    "./footer": "./components/footer/index.tsx",
+    "./header": "./components/header/index.tsx",
     "./setup-counter": "./utils/counter.ts"
   },
   "license": "MIT",
